# pyhub-office-automation

./: .gitignore  .pre-commit-config.yaml  BATCH_SCRIPTING_DESIGN.md  CHANGELOG.md  CLAUDE.md  EXAMPLE.md  ISSUE88_TEST_SUMMARY.md  PRD.md  README.md  RELEASE_NOTES_v2.md  RELEASE_NOTES_v9.2539.0.md  SHELL_TESTING_GUIDE.md  SHELL_TEST_RESULTS.md  UNIFIED_SHELL_DESIGN.md  build_macos.sh  build_windows.bat  build_windows.ps1  click-to-typer-migration-status.md  create_icon.py  create_test_validation_data.py  github-issue-click-typer-migration.md  lint.bat  lint.ps1  lint.sh  oa.spec  pyproject.toml  requirements.txt  runtime_hook_win32com.py  sample_province_data.csv  sample_seoul_data.csv  seoul_marker_map.html  seoul_test_map.html  setup.py  test_com_cache_fix.py  test_commit.py  test_icon_integration.py  test_issue88_commands.py  test_shell_excel.py  test_shell_ppt.py  update_com_cleanup.sh  (+1 more)
.claude/: settings.local.json
.claude/agents/: ai-interface-designer.md  cli-architect.md  documentation-specialist.md  excel-automation-specialist.md  hwp-automation-specialist.md  package-distribution-manager.md  security-compliance-officer.md  test-automation-engineer.md
.github/workflows/: build-test.yml  publish.yml  release.yml  test.yml
docs/: ADVANCED_FEATURES.md  AI-요청-예시.md  AI-워크플로우-예시.md  CLAUDE_CODE_PATTERNS.md  COM_IMPROVEMENTS_SUMMARY.md  ENGINES.md  EXE-빌드-가이드.md  MCP_README.md  SHELL_USER_GUIDE.md  ai-tool-integration.md  connector-mcp-analysis-report.md  data-commands-implementation-plan.md  data-transformation-test-cases.md  email.md  사용자-가이드.md  차트-명령어-가이드.md
docs/issues/: com-error-implementation-report.md  com-error-improvement.md
docs/releases/: v2.2538.19.md  v7.2539.67.md
examples/: batch_control_flow_example.oas  batch_error_handling_example.oas  batch_example.oas  batch_variables_example.oas  ppt_shell_basic_workflow.md  shell_basic_workflow.md  shell_troubleshooting.md
pyhub_office_automation/: __init__.py  version.py
pyhub_office_automation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pyhub_office_automation/batch/: __init__.py  control_flow.py  executor.py  variables.py
pyhub_office_automation/cli/: __init__.py  ai_guides.py  ai_setup.py  main.py
pyhub_office_automation/email/: __init__.py  ai_providers.py  email_accounts.py  email_backends.py  email_config.py  email_send.py
pyhub_office_automation/excel/: __init__.py  activate_sheet.py  add_sheet.py  chart_add.py  chart_configure.py  chart_delete.py  chart_export.py  chart_list.py  chart_pivot_create.py  chart_position.py  create_workbook.py  data_analyze.py  data_transform.py  data_validate.py  delete_sheet.py  location_converter.py  map_location_guide.py  map_visualize.py  map_visualizer.py  metadata_generate.py  metadata_utils.py  open_workbook.py  pivot_configure.py  pivot_create.py  pivot_delete.py  pivot_list.py  pivot_refresh.py  range_convert.py  range_read.py  range_write.py  read_range.py  read_table.py  rename_sheet.py  shape_add.py  shape_delete.py  shape_format.py  shape_group.py  shape_list.py  sheet_activate.py  sheet_add.py  (+23 more)
pyhub_office_automation/excel/engines/: __init__.py  base.py  exceptions.py  macos.py  windows.py
pyhub_office_automation/excel/validators/: __init__.py  base_validator.py  null_validator.py  (+2 more)
pyhub_office_automation/hwp/: __init__.py  hwp_export.py  utils.py
pyhub_office_automation/mcp/: __init__.py  cli.py  http_server.py  server.py  simple_server.py
pyhub_office_automation/powerpoint/: __init__.py  animation_add.py  backend_selector.py  com_backend.py  content_add_audio.py  content_add_chart.py  content_add_equation.py  content_add_excel_chart.py  content_add_image.py  content_add_shape.py  content_add_smartart.py  content_add_table.py  content_add_text.py  content_add_video.py  content_update.py  export_images.py  export_notes.py  export_pdf.py  layout_apply.py  layout_list.py  presentation_create.py  presentation_info.py  presentation_list.py  presentation_open.py  presentation_save.py  run_macro.py  slide_add.py  slide_copy.py  slide_delete.py  slide_duplicate.py  slide_list.py  slide_reorder.py  slideshow_control.py  slideshow_start.py  template_apply.py  theme_apply.py  utils.py
pyhub_office_automation/resources/: llm-guide.md  welcome.md
pyhub_office_automation/shell/: __init__.py  excel_shell.py  ppt_shell.py  unified_shell.py
pyhub_office_automation/utils/: port_checker.py  python_detector.py  resource_loader.py
scripts/: create_version_tag.py
specs/: pyhwpx.md  xlwings.md  공공기관_데이터베이스_표준화_지침.md
tests/: COM_TESTING_README.md  __init__.py  conftest.py  run_com_tests.py  test_auto_position.py  test_com_edge_cases.py  test_com_performance_memory.py  test_com_resource_manager.py  test_excel_com_integration.py  test_excel_create_workbook.py  test_excel_create_workbook_simple.py  test_excel_data_commands.py  test_excel_open_workbook.py  test_excel_open_workbook_simple.py  test_excel_sheet_management.py  test_excel_shell.py  test_issue_70_com_error.py  test_powerpoint_com_backend.py  test_utils_timeout.py
tests/engines/: test_engine_basic.py  test_engine_factory.py  test_windows_engine.py
(+7 files in other folders)
