[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhub-office-automation"
dynamic = ["version"]
description = "Python-based Office automation package for AI agents (Excel, HWP, PowerPoint)"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Chinseok Lee", email = "me@pyhub.kr" }
]
keywords = ["office", "automation", "excel", "hwp", "powerpoint", "ppt", "ai", "agent", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "typer>=0.9.0",
    # xlwings: macOS에서 필수 (AppleScript 한계로 인한 하이브리드 접근)
    # Windows 핵심 22개 명령어는 Engine 레이어(pywin32 COM)로 마이그레이션 완료
    # 추가 기능(pivot, slicer, shape)과 macOS는 xlwings 의존성 유지
    "xlwings>=0.30.0",
    "pyhwpx>=0.2.0; sys_platform == 'win32'",
    "pandas>=2.0.0",
    "pathlib2>=2.3.0",
    "typing-extensions>=4.0.0",
    "keyring>=24.0.0",
    "python-pptx>=0.6.23",
    # pywin32: Windows Engine 레이어 핵심 (Issue #87)
    "pywin32>=306; sys_platform == 'win32'",
    "Pillow>=10.0.0",
    "prompt-toolkit>=3.0.50",
    "click-repl>=0.3.0",
    "folium>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "pre-commit>=3.0.0",
]
build = [
    "pyinstaller>=5.0.0",
]

[project.scripts]
oa = "pyhub_office_automation.cli.main:main"

[project.urls]
Homepage = "https://github.com/pyhub-apps/pyhub-office-automation"
Repository = "https://github.com/pyhub-apps/pyhub-office-automation"
Issues = "https://github.com/pyhub-apps/pyhub-office-automation/issues"

[tool.setuptools.dynamic]
version = {attr = "pyhub_office_automation.__version__"}

[tool.setuptools]
packages = ["pyhub_office_automation"]

[tool.black]
line-length = 127
target-version = ['py313']
include = '\.pyi?$'
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 127
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 127
max-complexity = 10
select = ["E9", "F63", "F7", "F82"]
ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
    ".tox",
    ".pytest_cache"
]
